hphp/test/zend/good/tests/classes/private_003.php.expectf
Call show()

Fatal error: Call to private method pass::show() from context 'fail' in %s/private_003.php on line 19
